# mailr

./: .gitignore  .mailr.toml  Cargo.toml  README.md
src/: config.rs  crypto.rs  log.rs  mail.rs  main.rs
