[package]
name = "mailr"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = {version = "4.5.1", features = ["derive"]}
inquire = "0.7.0"
lettre = "0.11.4"
